--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node server.js",
     "start": "node server.js",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd server && npm install && npm run build",
     "install-client": "cd client && npm install"
   },
   "dependencies": {
