--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "build": "npm install"
+    "build": "npm install",
+    "fund": "npm fund"
   },
   "keywords": [
     "NotePlus",
